@@ -1,16 +1,14 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-DIST restview-1.1.3.tar.gz 7181 RMD160 7f6f03faf351feb6271a77a17e7cf9571185bad3 SHA1 6220154d10ff5909ad74fe0b8e91b90e6b7540fc SHA256 de60ba194cd48091c6ab16c9a0f6c375caa5ae3bc2785460d256efced66efde9
 DIST restview-1.2.tar.gz 9296 RMD160 ed61d8810eb45f35c3cb6246ba71136b607efa9b SHA1 81aad5e46284a6b569c963ccf2106de2c94def2c SHA256 be28b13fb31af5a27d8a45ce52d796d0de7e160479712a5cb81e46628610a453
-EBUILD restview-1.1.3.ebuild 571 RMD160 7568346b5b678bb9e69bccb5845578755b34c8cd SHA1 f5a0341ffd0df82f751a55dd5c580190709357be SHA256 3e08bd97cebe9fc9e16e1b710d8acf8d3c37e4f196c7957b30b6c41560f64d25
-EBUILD restview-1.2.ebuild 683 RMD160 6cd1cb58cbf319f9956b13b9f7f08a8215134056 SHA1 1395a566c53a75b131d42dedd7f571edcb807024 SHA256 40d5729a6cdab9ec7a38c001273ebb71d78e14cecf3dbcda0429ba9bf5fe7592
-MISC ChangeLog 1832 RMD160 6cc2623f0f3e6d8da0f3533e684ae37393ec0c53 SHA1 9419a3594dd843e9731f2263d2f76590ae178b0b SHA256 26d62c970e9073fec3e6b85495ce5c90a0655f4be2b8fcd1f0e253f4f88b89fe
+EBUILD restview-1.2.ebuild 682 RMD160 5ff24e6654b08bd137ead42d20fb01b6de800873 SHA1 eb29691ccc97b00a823d84ad3993620ea7f16b9e SHA256 768d4c6a46794be4b2715df17d95fda0e1d67d4899d8269fd4cde8938a10675b
+MISC ChangeLog 1942 RMD160 50c3174d1ad0a10c6dd130767779e988e45ed26a SHA1 dac5953229d38a2c49dc04517202493f5543035c SHA256 2718c11e3971377ed4b789d77322279ec24a7b0dd3a682b06571f03804fcd9b6
 MISC metadata.xml 985 RMD160 5cedae084f9788bf886f35b0b7f0a4c8922abebc SHA1 c1cb878cfc4c6a86253cc07d12deafb2713998a9 SHA256 f401362a5a2e04e844efe2241ff30212ac5158909c32eadb3a7d29d79f199278
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.16 (GNU/Linux)
 
-iEYEARECAAYFAkyIrlgACgkQzJrj3cAXR0lGvQCgmJvcJBhkPEUK6FvAgHOpQjNz
-HlIAn0iqMezs+x2MmSeCoKV4uCtHO6XJ
-=DXg3
+iEYEARECAAYFAkyIsgwACgkQzJrj3cAXR0lZ2QCgjg65RABflkogTAhJdq00XbdQ
+S3sAn28mtzp9jlBqKmJPAP39X/R9ia9H
+=V0Y7
 -----END PGP SIGNATURE-----
