@@ -13,7 +13,7 @@ HOMEPAGE="http://mg.pov.lt/restview/"
 
 LICENSE="GPL-3"
 SLOT="0"
-KEYWORDS="amd64 ~x86"
+KEYWORDS="amd64 x86"
 IUSE="pygments"
 
 DEPEND="dev-python/setuptools"
