@@ -1,22 +1,0 @@
-dev-python/setuptools >=app-admin/eselect-python-20091230 =dev-lang/python-2*
-dev-python/setuptools dev-python/docutils pygments? ( dev-python/pygments ) >=app-admin/eselect-python-20091230 =dev-lang/python-2*
-0
-mirror://pypi/r/restview/restview-1.1.3.tar.gz
-
-http://mg.pov.lt/restview/
-GPL-3
-A viewer for ReStructuredText documents that renders them on the fly
-amd64 x86
-distutils eutils jnrowe-pypi multilib portability python toolchain-funcs
-pygments
-
-
-
-2
-
-compile install postinst postrm prepare
-
-
-
-
-
