@@ -6,7 +6,7 @@ mirror://pypi/r/restview/restview-1.2.tar.gz
 http://mg.pov.lt/restview/
 GPL-3
 A viewer for ReStructuredText documents that renders them on the fly
-amd64 ~x86
+amd64 x86
 distutils eutils jnrowe-pypi multilib portability python toolchain-funcs
 pygments
 
