@@ -1,4 +1,3 @@
-REM 2010-09-09 *1 +1 UNTIL 2038-01-19 MSG Stabilise x86 dev-python/restview-1.2 %a
 REM 2010-09-09 *1 +1 UNTIL 2038-01-19 MSG Stabilise x86 dev-python/see-1.0.0 %a
 REM 2010-10-10 *1 +1 UNTIL 2038-01-19 MSG Stabilise amd64 www-apps/mnemosyne-0.12 %a
 REM 2010-10-10 *1 +1 UNTIL 2038-01-19 MSG Stabilise x86 www-apps/mnemosyne-0.12 %a
