@@ -2,6 +2,10 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  09 Sep 2010; James Rowe <jnrowe@gmail.com> -restview-1.1.3.ebuild,
+  restview-1.2.ebuild:
+  Keyworded x86.
+
   09 Sep 2010; James Rowe <jnrowe@gmail.com> restview-1.2.ebuild:
   Keyworded amd64.
 
